themes/bootstrap_subtheme/css/style.css
/**
 * Place your custom styles here.
 */

/* Fix Bootstrap Reading fonts */
/* Suggested by Lee on 1/18/2017 */

html, body {
    font-family: Roboto,Trebuchet MS,Arial,Verdana,Helvetica,sans-serif;
    font-size: 15px;
}
h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    color: inherit;
    font-family: Roboto,Trebuchet MS,Arial,Verdana,Helvetica,sans-serif;
    font-weight: bold;
    line-height: 1.1;
}
h1 {
    /*color: rgb(226,164,42);*/
    color: #E8BD6B;
    font-size: 32px;
    font-weight: normal;
    margin-top: 0px;
}
.logo img {
    margin-top:15px;
}
/* Membership Status - Expose Form*/
/*
#form-membership-status > div > div > div > div > div.select-wrapper {
    display:inline-block;
}
*/

#about-us-container .panel-title {
    font-size:24px;
    font-weight: bold;
}
#about-us-container .about-us-body {
    padding: 20px;
}
#about-us-container h3 {
    font-size:20px;
}
#about-us-2 dd {
    display: list-item;list-style-type: disc;
    margin-left:40px;
}
#about-us-3 dt {
    margin-bottom:5px;
}
#form-membership-status  .select-wrapper {
    display:inline-block;
}
div.main-container > div > section > div > ol {
    list-style-type:none;
}
/* FAQ */
#faq-detailed-question {
    font-size:30px;
    font-weight:bold;
    margin:25px;
}
#faq-body {
    font-size:18px;
    margin:25px 50px 0px;
}
#organization-body {
    font-size:30px;
    font-weight:bold;
    margin:25px;
}
body {
    margin-top:0px;
}


/* Breadcrumb */
/*.breadcrumb {
    background-color:white;
    margin:5px;
    padding:5px;
    font-size:10pt;
}
.breadcrumb > li + li::before {
    content:"->";
}

.breadcrumb > li > a  {
    color: #153670;
}
*/
/* Footer Nav */
.nav-footer-middle > ul > li {
    border-right: 1px solid #bbb;
    height:25px;
}

.nav-footer-middle > ul > li:last-child {
    border-right: none;
}

.nav-footer-middle > ul > li > a {

    display: inline;
}
.nav-footer-middle > ul.nav.navbar-nav > li > a {
    padding: 5px 2px;
}
.nav-footer-middle {
    min-height:0px;
    width:350px;
    text-align: center;
    display: inline-block;
    white-space: nowrap;
}

.footer-date {
    color: darkgrey;
    font-size:12px;
}
.partner-content {
    border:1px solid #dddddd;
    border-top:0px;
    padding:15px;
}

/* CSO Page */
/* Download block */
#downloadPanel {
    width: 210px;
    float: right;
    background-color:#FFF;
    border: 1px solid #cccccc;
    padding: 10px;
    line-height: 15px;
    margin-left: 0px;
    margin-top: 15px;
    margin-bottom: 50px;
    color:#444444;
    font-size: 12px;
}
#downloadTitleBar {
    background-color:#f0f0f0;
    font-weight: bold;
    margin: -10px;
    margin-bottom: 5px;
    font-size: 12px;
    padding:5px;
    color:#333333;
}
#downloadTitleBar img {
    vertical-align:middle;
}
#downloadPanel span {
    margin-top: 0px;
    font-size:80%;
    float:right;
    color:#555555;
}
#downloadPanel hr {
    border-style:solid;
    border-width:1px 0px 0px 0px;
    border-color:#cccccc;
    margin-top: 9px;
    margin-bottom: 8px;
}
#downloadPanel a img {
    border:none;
    width:16px;
    height:16px;
    vertical-align:top;
    margin-right:5px;
}

#downloadPanelRegisterButton {
    margin-top: 20px;
    margin-bottom: 0px;
    margin-left: 50px;
}
/* END of CSO Page */

/* Authenticated and Anonymous User Menu */
#block-bootstrap-subtheme-account-menu {
    float: right;
    margin-top:25px;
}
#block-bootstrap-subtheme-account-menu > ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
#block-bootstrap-subtheme-account-menu > ul > li, #block-bootstrap-subtheme-account-menu > ul > a {
    display: inline;
    padding-right: 10px;
}
div.search-block-form > div.search-well {
    border:none;
}
.search-well {
    float: right;
    height: 20px;
}
.logo {
    min-width: 933px;
}
/* Make .btn responsive */

.btn-responsive {
    white-space: normal !important;
    word-wrap: break-word;
}

/* Well Classes */
.bg-orange {
    background-color:BlanchedAlmond;
}
.bg-blue {
    background-color:LightSteelBlue;
}
.bg-grey {
    background-color: #f5f5f5;
}
.bg-white {
    background-color: White;
}

/* Carousel*/
.carousel-caption {
    background-color:#337AB7;
    /* border: 1px solid; */
    border-radius: 25px;
    opacity: 0.7;
}

/* Search */
.search-well {
    background-color: #f8f8f8;
    border:none;
}
/* Looks better fixes */
/* Header */
header {
    margin-bottom:0px;
}

.navbar-default {
    margin-bottom:0px;
    background-color: #f8f8f8;
}
.front-page a {
    font-weight:bold;
}
#become-a-partner-wells h4, #become-a-partner-wells p {
    margin-bottom:25px;
}
#become-a-partner-wells > div > div > p:last-child {
    margin-bottom:10px;
}
/* h2 titles for contextual-region */
.contextual-region > h2 {
    color: black;
    font-size:18px;
}
/* FAQ Add */
#node-faq-form > div > div.layout-region-node-secondary {
    display:none;
    visability:hidden;
}
.layout-region-node-secondary {
    display:none;
}
/* Twitter Container */
#twitter-container {
    height:550px;
    max-height:550px;
    min-width:135px;
    overflow-y:scroll;
}
/* Make the Footer the same style as the header */
footer {
    background-color: #f7f7f7;
    border: 1px solid #e5e5e5;
    border-radius: 4px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
    margin-bottom: 20px;
    min-height: 20px;
    padding: 19px;
}
/* Adjust front page container */

/* Home Page */

h1 {
    font-size: 32px;
    font-weight: normal;
}
h2 {
    font-size: 28px;
    font-weight: normal;
}
body {
  position: relative;
}
ul.nav-pills {
  top: 20px;
  position: absolute;
}

/* CSO Page */
#cso-document-container {
  height: 700px;
  overflow: auto;
  border: 2px solid #dddddd;
  margin-top:15px;
  margin-bottom:15px;
}
div#cso-document-container > div > h2 {
    color:DarkBlue;
    font-size:18px;
    font-family: Georgia,"Times New Roman",Times,serif;
}
div#cso-document-container > div > h1 {
    color:DarkBlue;
    font-size:24px;
    font-weight: bold;
    font-family: Georgia,"Times New Roman",Times,serif;
}
#cso-container > div > div > button {
  width:210px;
  margin-top:5px;
}
.nav-pills > li > a {
    margin-right: 15px;
}
.btn-example {
  /*background-color: LightGrey; */
  margin-left: 5px;
}
/* Adjust label on Webforms */
#edit-current-annual-operating-budget-container > div > label::before {
    content: "(Optional*)";
    color: red;
    padding-right:5px;
}

/*  */

._control-label-align-right {
  text-align:right;
}
._row {
  padding-top: 1.5rem;
}

._col-1 > label, ._col-2 > label, ._col-3 > label, ._col-4 > label, ._col-5 > label, ._col-6 > label, ._col-7 > label, ._col-8 > label, ._col-9 > label, ._col-10 > label, ._col-11 > label, ._col-12 > label, ._col-sm-1 > label, ._col-sm-2 > label, ._col-sm-3 > label, ._col-sm-4 > label, ._col-sm-5 > label, ._col-sm-6 > label, ._col-sm-7 > label, ._col-sm-8 > label, ._col-sm-9 > label, ._col-sm-10 > label, ._col-sm-11 > label, ._col-sm-12 > label {
  position: relative;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-bottom: 0;  
}
._col-sm-2-for-label > label {
  color:blue;
  position: relative;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
}
._col-1 > label {
  float: left;
  width: 8.333333%;
}

._col-2 > label {
  float: left;
  width: 16.666667%;
}

._col-3 > label {
  float: left;
  width: 25%;
}

._col-4 > label {
  float: left;
  width: 33.333333%;
}

._col-5 > label {
  float: left;
  width: 41.666667%;
}

._col-6 > label {
  float: left;
  width: 50%;
}

._col-7 > label {
  float: left;
  width: 58.333333%;
}

._col-8 > label {
  float: left;
  width: 66.666667%;
}

._col-9 > label {
  float: left;
  width: 75%;
}

._col-10 > label {
  float: left;
  width: 83.333333%;
}

._col-11 > label {
  float: left;
  width: 91.666667%;
}

._col-12 > label {
  float: left;
  width: 100%;
}

/*==================================================
=            Bootstrap 3 Media Queries             =
==================================================*/

/*==========  Mobile First Method  ==========*/

/* Custom, iPhone Retina */
@media only screen and (min-width : 320px) {
    .main-container {
        padding-left:15px;
        padding-right:15px;
    }
    .nav-footer-middle > ul > li {
        border-right: 0px;
    }
    #twitter-container {
        margin: 0 -10px;
    }
}

/* Extra Small Devices, Phones */
@media only screen and (min-width : 480px) {
    .main-container {
        padding-left:15px;
        padding-right:15px;
    }
    .nav-footer-middle > ul > li {
        border-right: 0px;
    }
    #twitter-container {
        margin: 0 -10px;
    }
}

/* Small Devices, Tablets */
@media only screen and (min-width : 768px) {
    .main-container {
        padding-left:15px;
        padding-right:15px;
    }
    .nav-footer-middle > ul > li {
        border-right: 1px solid #bbb;
    }
    .nav-footer-middle > ul > li:last-child {
        border-right: none;
    }
}

/* Medium Devices, Desktops */
@media only screen and (min-width : 992px) {
    .main-container {
        padding-left:0px;
        padding-right:0px;
    }
    .nav-footer-middle > ul > li {
        border-right: 1px solid #bbb;
    }
    .nav-footer-middle > ul > li:last-child {
        border-right: none;
    }
}

/* Large Devices, Wide Screens */
@media only screen and (min-width : 1200px) {
    .main-container {
        padding-left:0px;
        padding-right:0px;
    }
    .nav-footer-middle > ul > li {
        border-right: 1px solid #bbb;
    }
    .nav-footer-middle > ul > li:last-child {
        border-right: none;
    }
}

@media only screen and (min-width : 1450px) {
    #navbar, .footer, .main-container {
        width:1440px;
        max-width:1440px;
    }
    .main-container {
        padding-left:0px;
        padding-right:0px;
    }
    .front-page-banner {
        width:72%;
    }
    .nav-footer-middle > ul > li {
        border-right: 1px solid #bbb;
    }
    .nav-footer-middle > ul > li:last-child {
        border-right: none;
    }
}
/* Font Awesome icons on the front page */
.fa-stack.fa-lg {
    margin-bottom: 5px;
}
.aside-title {
    color: #3371a8;
    font-size: 22px;
}
.form-item-keys {
    width: 325px;
}
.newsletter-title{
    padding:2px;
    font-size:18px;
    font-weight:bold;
}
.newsletter-image{
    padding:15px;
    width:190px;
   
}
.newsletter-description{
    padding:5px;
}
.newsletter-image img {
    box-shadow: 10px 10px 5px #888888;
}

